# northstar26

./: CMakeLists.txt  CMakeLists_simulation.txt  README.md  todo.md
include/: Configuration.h  InverseKinematics.h  Kinematics.h  LQR.h  MotionController.h  Path.h  Physics.h  Quadcopter.h  Util.h
src/: compute_K.py  compute_mixer.py  main.ino  main.py  quadcopter.py  simulate.cpp  sketch.ino  test.cpp  test.py
src/FlightController/: app.yaml  udp_relay.py
src/FlightController/cpp/: WT901_IMU.cpp  sketch.ino
src/FlightController/py/: main.py  quadcopter.py
src/FlightController/python/: communication.py  main.py  quadcopter.py
src/FlightController/sketch/: IMU.cpp  IMU.h  WT901_IMU.cpp  WT901_IMU.h  sketch.ino  sketch.yaml
src/GroundStation/: communication.py  test_coms.py
src/GroundStation/MoCap_og/: helpers.py
src/MCU/cpp/: WT901_IMU.cpp  WT901_IMU.h  sketch.ino
src/MCU/py/: main.py
src/QCLib/: InverseKinematics.cpp  Kinematics.cpp  LQR.cpp  MotionController.cpp  Path.cpp  Physics.cpp  Quadcopter.cpp  Util.cpp
